# oxide

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
npm/: README.md  install.js  package.json  wrapper.js
src/: cache.rs  completions.rs  lib.rs  main.rs  paths.rs  upgrade.rs
src/addons/: cache.rs  detect.rs  install.rs  lock.rs  runner.rs
src/addons/steps/: append.rs  copy.rs  create.rs  delete.rs  inject.rs  move_step.rs  rename.rs  replace.rs
src/auth/: login.rs  token.rs
src/cli/: commands.rs  mod.rs
src/templates/: install.rs  loader.rs  mod.rs
src/utils/: archive.rs  errors.rs  git.rs  mod.rs
tests/: addon_cache.rs  addon_detect.rs  addon_install.rs  addon_lock.rs  addon_manifest.rs  addon_runner.rs  auth_logout.rs  auth_server.rs  auth_token.rs  cli.rs  completion_helpers.rs  completions.rs  errors.rs  fs_utils.rs  generator.rs  http_publish.rs  paths.rs  steps.rs  template_cache.rs  template_install.rs  template_types.rs  upgrade_helpers.rs  validate.rs
tests/common/: mod.rs
