[package]
name = "oxide-cli"
version = "0.7.1"
edition = "2024"
authors = ["Maksym <maksymzhuk759@gmail.com>"]
description = "⚡ Lightning-fast project scaffolding tool for modern JavaScript/TypeScript development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxide-cli/oxide"
documentation = "https://docs.rs/oxide"
readme = "README.md"
keywords = ["cli", "scaffold", "template", "javascript", "typescript"]
categories = ["command-line-utilities", "development-tools"]

include = [
  "src/**/*",
  "templates/**/*",
  "Cargo.toml",
  "LICENSE-*",
  "README.md",
  "CHANGELOG.md",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "color"] }

# Interactive prompts
inquire = "0.9.3"

# Progress bars and spinners
indicatif = "0.18.3"

# Colored output
colored = "3.1.1"

# Template engine
tera = "1.19"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Filesystem operations
walkdir = "2.4"
ignore = "0.4"
tempfile = "3.10"
fs_extra = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
toml = "1.0.1"

# HTTP & Archives
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
zip = "8.1.0"
tar = "0.4"
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Utilities
glob = "0.3"
regex = "1.10"
semver = "1.0"
which = "8.0.0"

include_dir = "0.7"
dirs = "6.0"
ctrlc = "3.5.2"
chrono = "0.4.43"
comfy-table = "7"
axum = "0.8.8"
open = "5.3.3"
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "oxide"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
